<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/matchResultsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stadium_bg">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resultsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".presentation.matchresults.MatchResultsFragment"
        tools:listitem="@layout/item_match_result"
        tools:visibility="invisible" />

    <!-- Empty View -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptyViewContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_black_overlay"
        android:padding="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEmptyView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/empty_view_text_no_match_data"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    android:textColor="@android:color/white" />

                <ImageButton
                    android:id="@+id/ibEmptyViewIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/content_desc_simulate_matches_button"
                    android:src="@drawable/ic_simulate_match_icon" />

                <TextView
                    android:id="@+id/tvEmptyView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/empty_view_text_get_started"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEmptyView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/empty_view_text_hit_switch"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    android:textColor="@android:color/white" />

                <ImageButton
                    android:id="@+id/ibEmptyViewIcon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/content_desc_simulate_matches_button"
                    android:src="@drawable/ic_simulate_icon" />

                <TextView
                    android:id="@+id/tvEmptyView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/empty_view_text_standings"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
