...
        android:src="@drawable/ic_trophy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/winnersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/okButton"
        app:layout_constraintTop_toBottomOf="@+id/headerIcon1"
...
