...
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/scoreHeader"
                app:layout_constraintTop_toBottomOf="@id/roundTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/matchesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_container"
...
